# AI-Dev-Orchestrator

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml
runtime/orchestrator/: README.md  pyproject.toml
runtime/orchestrator/app/: __init__.py  main.py
runtime/orchestrator/scripts/: _smoke_runtime_env.py  bcg07b_provider_reported_replay_live.py  bcg08a_real_ai_run_summary_live.py  bcg09a_provider_run_deliverable_approval_live.py  bcg10_rework_task_live.py  bcg10a_approval_request_changes_rework_live.py  bcg11a_repository_binding_snapshot_live.py  bcg12a_file_locator_context_pack_live.py  bcg13a_change_plan_batch_live.py  bcg14a_manual_reject_closeout_live.py  bcg14a_preflight_manual_confirmation_live.py  bcg14a_r1_preflight_reject_closeout_live.py  bcg15a_commit_candidate_live.py  bcg15a_r1_commit_candidate_protection_live.py  bcg16a_apply_local_git_commit_live.py  bcg16a_r1_apply_local_guard_closeout_live.py  bcg16a_r3_apply_local_git_guard_live.py  bcg18_release_gate_live.py  p10_evidence_to_agent_dry_run.py  p11_project_director_evidence_to_agent_api_smoke.py  p12_project_director_dry_run_task_dispatch_smoke.py  p13_project_director_controlled_executor_lifecycle_smoke.py  p14_project_director_controlled_subprocess_smoke.py  p15_project_director_readonly_reviewer_smoke.py  p16_project_director_programmer_no_write_plan_smoke.py  p17_project_director_programmer_no_write_execution_smoke.py  p20_project_director_sandbox_write_preflight_smoke.py  p21_b_project_director_sandbox_write_design_lock_smoke.py  (+68 more)
(+1624 files in other folders)
